@@ -1,5 +1,6 @@
-require 'cucumber/jvm_support/backtrace_filter'
-require 'forwardable'
+require 'cuke4duke/language_proxy'
+
+Cuke4Duke.cuke4!('class', false)
 
 module Cucumber
   module ClassSupport
@@ -14,16 +15,8 @@ module Cucumber
         end
       end
       
-      extend Forwardable
-      include ::Cucumber::LanguageSupport::LanguageMethods
-
-      def_delegators :@delegate, :load_code_file, :step_matches, :begin_scenario, :end_scenario
-
       def initialize(step_mother)
         @delegate = ::Java::Cuke4dukeInternalJvmclass::ClassLanguage.new(self, self.class.analyzers)
-      end
-
-      def alias_adverbs(adverbs)
       end
 
       def snippet_text(step_keyword, step_name, multiline_arg_class = nil)
